feat(cdn): add CDN_PREFIX environment variable to allow targetting folders in media storage

--- a/.dockerignore
+++ b/.dockerignore
@@ -11,3 +11,8 @@ storage/framework/testing/**
 storage/framework/views/**
 storage/logs/**
 storage/passport/**
+
+.garden
+garden_modules
+garden.yaml
+error.log
